--- a/son/appsettings.json
+++ b/son/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sonContext": "Data Source=YUNO\\SQLEXPRESS;Initial Catalog=son;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "sonContext": "Data Source=DESKTOP-T5I26HK;Initial Catalog=son;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   }
 }
